# bevy-tetris

./: Cargo.toml  README.md  Trunk.toml  index.html  save.txt
.cargo/: config  config.toml
_examples/: low_power.rs  move_sprite.rs  multi_window.rs  state.rs  ui.rs
docs/: index.html  tetris.js
examples/: move_sprite.rs  multi_window.rs  state.rs  ui.rs
src/: audio.rs  egui_window.rs  example_system.rs  main.rs  menu.rs
states/: Cargo.toml
states/src/: lib.rs
tetris_plugin/: Cargo.toml  debug.txt  tetris.txt
tetris_plugin/src/: bounds.rs  events.rs  game_command_handler.rs  input.rs  lib.rs  window.rs
tetris_plugin/src/components/: block.rs  coordinates.rs  mod.rs  tetromino.rs
tetris_plugin/src/queries/: mod.rs
tetris_plugin/src/resources/: board.rs  board_assets.rs  board_options.rs  map.rs  map.txt  mod.rs  popup.rs  score.rs  shape.rs  tick.rs  tile.rs  transitions.rs
tetris_plugin/src/systems/: animate_line_del.rs  board.rs  cleaning.rs  collision.rs  game_command.rs  gameover.rs  line.rs  load_and_save.rs  mod.rs  move_tiles.rs  popup.rs  print_info.rs  rotate.rs  score.rs  sidebar.rs  spawn.rs  spawn_debug_tile.rs  tetromino.rs  tick.rs
tetris_plugin/src/utils/: mod.rs  move_block.rs
tetris_plugin/test_resources/: move_blocks_down.txt  move_blocks_down_result.txt
