[package]
authors = ["simon_an"]
edition = "2021"
name = "bevy-tetris"
version = "0.2.0"

[workspace]
members = [
  "tetris_plugin",
]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
debug = ["tetris_plugin/debug", "bevy-inspector-egui"]
demo = ["tetris_plugin/demo"]
ui = []
menu = []
default = ["ui", "menu"]

[dependencies]
bevy-inspector-egui = {version = "0.10.0", optional = true}
bevy_egui = "0.14.0"
colored = {version = "2"}
rand = "0.8.5"
tetris_plugin = {path = "tetris_plugin"}

[dependencies.bevy]
default-features = false
features = ["render", "bevy_winit", "png"]
version = "0.7"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
default-features = false
features = ["wayland"]
version = "0.7"

[dev-dependencies]
once_cell = "1.9"
