[package]
authors = ["Simon Potzernheim"]
edition = "2021"
name = "bevy-tetris"
version = "0.2.1"

[workspace]
members = [ "states",
  "tetris_plugin",
]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
debug = ["tetris_plugin/debug", "bevy-inspector-egui"]
demo = ["tetris_plugin/demo"]
ui = []
menu = []
default = ["menu"]

[dependencies]
bevy-inspector-egui = {version = "0.28.0", optional = true}
bevy_egui = "0.31.1"
colored = {version = "2"}
rand = "0.8.5"
tetris_plugin = {path = "tetris_plugin"}
states = { path = "states" }

[dependencies.bevy]
default-features = true
features = ["bevy_winit", "png", "bevy_audio", "mp3"]
version = "0.15.0"

# Dependencies for native only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
default-features = false
features = ["wayland"]
version = "0.15.0"

[dev-dependencies]
once_cell = "1.20.2"
