[package]
name = "tetris_plugin"
version = "0.1.0"
edition = "2021"

[features]
debug = ["bevy-inspector-egui"]
demo = []
default = []

[dependencies]
serde = "1.0"
rand = "0.8"
colored = {version = "2"}
bevy-inspector-egui = {version = "0.10.0", optional = true}
bevy_tweening = "0.4.0"
# iyes_loopless = "0.5.1"

# Engine
[dependencies.bevy]
default-features = false
features = ["render"]
version = "0.7"
# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.2"
features=["js"]

[dev-dependencies]
bevy_egui = "0.14"
pretty_assertions = "1.1"