[package]
name = "tetris_plugin"
version = "0.1.0"
edition = "2021"

[features]
debug = ["bevy-inspector-egui"]
demo = []
default = []

[dependencies]
states = { path = "../states" }
serde = "1.0"
rand = "0.8"
colored = {version = "2"}
bevy-inspector-egui = {version = "0.28.0", optional = true}
bevy_tweening = "0.11.0"

# Engine
[dependencies.bevy]
default-features = false
features = []
version = "0.15.0"
# Dependencies for WASM only
[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version="0.2"
features=["js"]

[dev-dependencies]
bevy_egui = "0.31.1"
pretty_assertions = "1.1"
[dev-dependencies.bevy]
default-features = false
features = ["bevy_winit"]
version = "0.15.0"